manifests/space/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: space-app-green
  namespace: space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: space-app
      version: v7
  template:
    metadata:
      labels:
        app: space-app
        version: v7
    spec:
      containers:
      - name: space-app
        image: pro24/space:v7
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "500Mi"
          requests:
            memory: "400Mi"
