manifests/space/deployment-next-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-app-green
  namespace: space
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-app
      version: v2
  template:
    metadata:
      labels:
        app: next-app
        version: v2
    spec:
      containers:
        - name: next-app
          image: pro24/next-app:v5
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "400Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: next-app-green
  namespace: space
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  type: ClusterIP
  selector:
    app: next-app
    version: v2
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
