manifests/space/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: space-app-blue
  namespace: space
  labels:
    app: space-app
    version: v6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: space-app
      version: v6
  template:
    metadata:
      labels:
        app: space-app
        version: v6
    spec:
      containers:
      - name: space-app
        image: pro24/space:v7
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "500Mi"
          requests:
            memory: "400Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: space-service
  namespace: space
spec:
  type: ClusterIP
  selector:
    app: space-app
  ports:
  - port: 8080
    targetPort: 8080
