manifests/space/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: space
spec:
  selector:
    app: kong
  ports:
  - name: proxy
    port: 8000
    targetPort: 8000
  - name: proxy-ssl
    port: 8443
    targetPort: 8443
  - name: admin
    port: 8001
    targetPort: 8001
  - name: admin-ssl
    port: 8444
    targetPort: 8444
  type: ClusterIP
