manifests/space/destinationrule-next.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: next-destrule
  namespace: space
spec:
  host: next-app-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
