manifests/space/ingress-next-app-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-app-green-ingress
  namespace: space
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:049522813157:certificate/ebcb172e-7f28-41a4-bf72-46f199c31555
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/ssl-policy: 'ELBSecurityPolicy-TLS13-1-2-2021-06'
spec:
  ingressClassName: alb
  rules:
    - host: staging.nicetohavespace.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-app-green
                port:
                  number: 3000
