manifests/space/virtualservice-space.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: space-service-virtualservice
  namespace: space
spec:
  hosts:
    - space-service
  http:
    - name: "route-to-v7"
      match:
        - headers:
            x-backend-version:
              exact: v7
      route:
        - destination:
            host: space-service
            subset: v7
          weight: 100
    - name: "route-to-v6"
      match:
        - headers:
            x-backend-version:
              exact: v6
      route:
        - destination:
            host: space-service
            subset: v6
          weight: 100
    - name: "default-fallback"
      route:
        - destination:
            host: space-service
            subset: v6
          weight: 100
